# parser_avito

./: .dockerignore  .gitignore  AvitoParser.py  CHANGELOG.md  DOCS.md  Dockerfile  Makefile  README.md  common_data.py  compose.prod.yml  config.toml  custom_exception.py  db_service.py  dist.settings.ini  docker-compose.yml  dto.py  entrypoint.sh  get_cookies.py  hide_private_data.py  jitsu.conf  json_service.py  lang.py  load_config.py  locator.py  main.py  models.py  nginx.prod.conf  parser_cls.py  pg_hba.conf  playwright_setup.py  prompt_user_login.py  pyproject.toml  requirements.txt  run_avito_parser.bat  settings.ini  settings.yaml  state.json  tg_sender.py  tooltip.py  url_generator.py  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  suggestion.yml
.github/workflows/: deploy.yml  docker.yml  release.yml
core/: settings.py
docs/: ANTIBLOCK.md  CHANGELOG.md  DOCKER.md  DOCS.md  NOTIFICATIONS.md
filters/: ads_filter.py
integrations/notifications/: base.py  composite.py  factory.py  telegram.py  transport.py  utils.py  vk.py
lib/: req.py
parser/cookies/: base.py  external_api.py  factory.py  own_cookies.py
parser/export/: base.py  composite.py  excel.py  factory.py
parser/export/naming/: base.py  factory.py  per_link.py  single_file.py
parser/http/: client.py
parser/proxies/: proxy.py  proxy_factory.py
utils/: build_api_params.py  normalize_parametr.py  parse_phone.py  prompt_user_login.py
